# fastapi-oauth20-demo

./: .env.example  README.md  config.py  main.py  pyproject.toml
clients/: __init__.py  feishu.py  gitee.py  github.py  google.py  linuxdo.py  oschina.py  wechat_mp.py  wechat_open.py
templates/: index.html
