[project]
name = "fastapi-oauth20-demo"
version = "0.0.1"
description = "FastAPI OAuth 2.0 Demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "fastapi-oauth20>=0.0.2",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.0.0",
]
